# observability-workshop

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .last-translated-tag  .textlintrc  .tool-versions  .travis.yml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THOUSANDEYES_INTEGRATION.md  TODO.md  VERSION  app-dev-workshop-deploy-key.enc  cloud-init-application.yaml  cloud-init-k3s.yaml  cloud-init-microk8s.yaml  cloud-init-smart-gateway.yaml  config.toml  config.yaml  email-template.md  extra.css  go.mod  go.sum  hugo.toml  hugo.yaml  hugo.yaml.old  index.html  index.json  index.md.orig  index.print.html  index.xml  latest  mkdocs.yml  o11y-workshop-deploy-key.enc  observability-workshop.sln  package-lock.json  (+8 more)
.ci/: deploy.sh  prepare-release.sh  release.sh
.claude/: settings.json
.github/: pull_request_template.md
Context-Propagation/: .gitignore
apm/: demo.py  hotrod-deployment.yaml  post_data.json
archive/: cloud-init-smart-gateway.yaml
assets/: jsconfig.json
categories/: index.html  index.xml
cleanup/: index.html
cloud-init/: k3s.yaml  k3s.yaml.old  microk8s.yaml  powerline.txt  victorops-ec2.yaml  victorops.yaml
conf/: index.html  index.print.html  index.xml
content/: _index.html
css/: bundle.min.0454ae81e65fa8f384a6786a012ce0566367289dea15624dfc7a9eac53311090.css  format-html.min.css  swagger.min.css  theme.min.css  (+13 more)
ec2/: PH.out  (+6 more)
workshop/support-portal-remediation-agent/apps/remediation-agent/: pyproject.toml
workshop/support-portal-remediation-agent/apps/remediation-agent/app/: main.py  telemetry.py
(+134541 files in other folders)
